--- a/app/catalog.html
+++ b/app/catalog.html
@@ -84,19 +84,28 @@
 </header>
 
 <main>
-    <section class="catalog-divider divider">
-        <img src="img/_src/catalog-img.png" alt="">
+    <div class="breadcrumbs section-padding">
+        <div class="container">
+            <a href="index.html" class="breadcrumbs__main">Главная</a>
+            <a class="breadcrumbs__title">Каталог</a>
+            <a class="breadcrumbs__title">Название товара</a>
+        </div>
+    </div>
+    <section class="catalog-divider catalog-slider__item divider">
+        <div>
+            <img src="img/_src/catalog-img.png" alt="">
+        </div>
+        <div>
+            <img src="img/_src/catalog-img.png" alt="">
+        </div>
+
     </section>
     <section class="product-another section-padding">
         <div class="container">
-            <div class="breadcrumbs">
-                <a href="index.html" class="breadcrumbs__main">Главная</a>
-                <a class="breadcrumbs__title">Каталог</a>
-                <a class="breadcrumbs__title">Название товара</a>
-            </div>
+
             <div class="slider-header">
                 <button class="prev-arrow btn btn__white">Назад</button>
-                <div class="catalog-slider__title">
+                <div class="catalog-slider__title catalog-slider__item">
                     <h1 class="title__big section-title catalog-title">Полуфабрикаты замороженные</h1>
                     <h1 class="title__big section-title catalog-title">Полуфабрикаты размороженные</h1>
                 </div>
